---
source: crates/plotnik-compiler/src/parser/tests/grammar/definitions_tests.rs
---
Expr = [(identifier) (number)]
(program (Expr) @value)
---
error: definition must be named
  |
2 | (program (Expr) @value)
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
help: give it a name like `Name = (program (Expr) @value)`
